Prevent <code> blocks from being wrapped This may not be awesome on small viewports with long <code> blocks, so this may end up being rolled back if feedback is negative.

--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -98,6 +98,8 @@ pre {
 }
 
 code {
+    white-space: nowrap;
+
     background-color: #e0e0e0;
     border-radius: 3px;
     padding: 0 5px;
